--- a/package.json
+++ b/package.json
@@ -1,39 +1,55 @@
 {
   "name": "nwt-school-front-ng12",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "description": "New Web's Technologies course with Angular 12",
+  "author": "Nicolas Jessel <akanass@icloud.com>",
+  "license": "MIT",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "server": "cd ./_server && node ./main.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.2.0",
-    "@angular/common": "~12.2.0",
-    "@angular/compiler": "~12.2.0",
-    "@angular/core": "~12.2.0",
-    "@angular/forms": "~12.2.0",
-    "@angular/platform-browser": "~12.2.0",
-    "@angular/platform-browser-dynamic": "~12.2.0",
-    "@angular/router": "~12.2.0",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "@angular/animations": "^12.2.7",
+    "@angular/cdk": "^12.2.7",
+    "@angular/common": "^12.2.7",
+    "@angular/compiler": "^12.2.7",
+    "@angular/core": "^12.2.7",
+    "@angular/forms": "^12.2.7",
+    "@angular/material": "^12.2.7",
+    "@angular/platform-browser": "^12.2.7",
+    "@angular/platform-browser-dynamic": "^12.2.7",
+    "@angular/router": "^12.2.7",
+    "@nestjs/common": "^8.0.7",
+    "@nestjs/core": "^8.0.7",
+    "@nestjs/platform-fastify": "^8.0.7",
+    "@nestjs/swagger": "^5.0.9",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
+    "config": "^3.3.6",
+    "fastify-swagger": "^4.12.1",
+    "js-yaml": "^4.1.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.3.0",
+    "tslib": "^2.3.1",
+    "zone.js": "^0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.7",
-    "@angular/cli": "~12.2.7",
-    "@angular/compiler-cli": "~12.2.0",
-    "@types/jasmine": "~3.8.0",
-    "@types/node": "^12.11.1",
-    "jasmine-core": "~3.8.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
+    "@angular-devkit/build-angular": "^12.2.7",
+    "@angular/cli": "^12.2.7",
+    "@angular/compiler-cli": "^12.2.7",
+    "@types/jasmine": "^3.9.1",
+    "@types/node": "^16.10.1",
+    "jasmine-core": "^3.9.0",
+    "karma": "^6.3.4",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage": "^2.0.3",
+    "karma-jasmine": "^4.0.1",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "typescript": "~4.3.5"
   }
 }
